--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -261,3 +261,18 @@
     margin-left: 48%;
     padding-top: 10px;
 }
+
+.errors-container {
+    display: flex;
+    justify-content: center;
+}
+
+/* not working properly with background color */
+#show-errors {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    padding: 15px 0 15px 30px;
+    border-radius: 3px;
+    color: #333;
+    font-size: 14px;
+    top: 10%;
+}
