--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 
   <body>
     <script type="text/javascript">
-      window.homePhotoURL = "<%= image_url('homepage2.png') %>";
+      window.homepageBG = "<%= image_url('homepage2.png') %>";
+      window.logo = "<%= image_url('smackinlogo.png') %>";
     </script>
     <%= yield %>
   </body>
