--- a/app/assets/stylesheets/business_index.css
+++ b/app/assets/stylesheets/business_index.css
@@ -1,4 +1,40 @@
+.biz-index-searchbar {
+    height: 100px;
+}
+
+
+.biz-index-filters-aside {
+    z-index: 5;
+    position: sticky;
+    top: 100px;
+    margin-top: 50px;
+    width: 200px;
+}
+
+.biz-index-list-container {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
 .biz-index-photo {
     width: 225px;
     height: 240px;
+}
+
+.biz-index-list {
+    margin-left: 220px;
+    margin-top: -20px;
+}
+
+.biz-index-item-name-container {
+    display: block;
+}
+
+.biz-index-item-name {
+    color: #2d2e2f;
+    font-size: 20px;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    display: block;
 }
