--- a/app/assets/stylesheets/business_index.css
+++ b/app/assets/stylesheets/business_index.css
@@ -2,6 +2,11 @@
     height: 100px;
 }
 
+.biz-index-list {
+    margin-left: 190px;
+    margin-top: -20px;
+}
+
 
 .biz-index-filters-aside {
     z-index: 5;
@@ -17,15 +22,55 @@
     margin-left: 10px;
 }
 
-.biz-index-photo {
-    width: 225px;
+.biz-index-item{
+    display: block;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
+    text-decoration: none;
+    border: 1px solid #ebebeb;
+    border-radius: 4px;
+    width: 50%;
     height: 240px;
+    min-width: 680px;
+    max-width: 800px;
+    margin: 15px 35px;
+    padding: 24px;
 }
 
-.biz-index-list {
-    margin-left: 220px;
-    margin-top: -20px;
+.biz-index-item:hover {
+    box-shadow: 0 0 12px #0000001a;
+    transition: box-shadow 0.4s;
 }
+
+.biz-index-item-container {
+    display: flex;
+}
+
+.biz-index-photo {
+    width: 220px;
+    height: 220px;
+    border-radius: 4px;
+    object-fit: cover;
+    margin-top: 3px;
+}
+
+.biz-index-item-inner-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.biz-index-item-name-container {
+    display: block;
+}
+
+.biz-index-item-name {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 10px 0 10px 20px;
+    color: #2d2e2f;
+    border-radius: 3px;
+}
+
 
 .biz-index-item-name-container {
     display: block;
@@ -34,7 +79,84 @@
 .biz-index-item-name {
     color: #2d2e2f;
     font-size: 20px;
-    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
     font-weight: 700;
     display: block;
+}
+
+.biz-index-item-rating-container {
+    display: flex;
+    color: rgba(110,112,114,1);
+}
+
+.biz-index-item-rating {
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.biz-index-item-numReviews {
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+.biz-index-item-details {
+    display: flex;
+    color: rgba(110,112,114,1);
+    margin-top: 7px;
+}
+
+.biz-index-item-category {
+    margin-left: 20px;
+    margin-bottom: 10px;
+    appearance: none;
+    -webkit-text-decoration: none;
+    text-decoration: none;
+    box-sizing: border-box;
+    padding: 4px;
+    border-radius: 4px;
+    height: 20px;
+    white-space: nowrap;
+    background-color: rgba(240,240,240,1);
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
+    font-size: 12px;
+    line-height: 12px;
+    color: rgba(110,112,114,1);
+    font-weight: 700;
+}
+
+.biz-index-item-price {
+    margin-top: 4px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.biz-index-item-hours {
+    color: rgba(45,46,47,1);
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 20px;
+    margin-top: 7px;
+}
+
+.biz-index-item-review-wrapper {
+    display: flex;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.biz-index-item-review-icon {
+    color: #000;
+}
+
+.biz-index-item-review-body {
+    color: rgba(110,112,114,1);
+    font-size: 14px;
+    margin-left: 7px;
+    line-height: 1.3em;
 }
