--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -87,26 +87,29 @@
 
 .homepage-welcome-user-wrapper {
     margin-left: 70%;
-    margin-top: -3.2%;
+    margin-top: -2.7%;
 }
 
 .homepage-welcome-user {
     color: #fff;
-    padding: 9px 12px 10px;
+    /* padding: 9px 12px 10px; */
     font-size: 14px;
     line-height: 1.28571em;
     font-weight: 700;
     background: none;
     font-size: 16px;
     font-weight: 700;
+    /* margin-right: 10px; */
+    padding-right: 20px;
+
 }
 
 .homepage-logout-user {
     position: absolute;
-    margin-left: 12%;
-    margin-top: -3%;
+    margin-left: 14%;
+    margin-top: -2.5%;
     color: #fff;
-    padding: 9px 12px 10px;
+    padding: 10px 12px 10px;
     font-size: 14px;
     line-height: 1.28571em;
     font-weight: 700;
