--- a/app/assets/stylesheets/business_index.css
+++ b/app/assets/stylesheets/business_index.css
@@ -161,14 +161,31 @@
     line-height: 1.3em;
 }
 
-.biz-index-map-container {
+.biz-index-all-results {
     position: absolute;
-    margin-top: -6000px;
-    z-index: 1000;
+    color: #2d2e2f;
+    font: 18px;
+    font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
+    margin-left: 230px;
+    margin-top: -50px;
+    font-weight: 700;
+}
+
+
+/* ---- MAP COMPONENT ---- */
+
+.biz-index-map-container {
+    position: sticky;
+    top: 70px;
+    margin-top: -70px;
+    min-width: 310px;
+    width: 100%;
+    height: 110vh;
+    margin-bottom: 18px;
 }
 
 #map-container {
-    width: 500px;
-    height: 500px;
-
+    min-width: 310px;
+    width: 100%;
+    height: 110vh;
 }
