--- a/app/assets/stylesheets/session_form.css
+++ b/app/assets/stylesheets/session_form.css
@@ -18,7 +18,7 @@
 }
 
 .session-form-header-link {
-    justify-content: center;
+    display: flex;
     text-decoration: none;
     color: white;
     font-size: 24px;
@@ -28,12 +28,13 @@
 }
 
 .session-form-header-logo {
-    justify-content: center;
     text-decoration: none;
     color: white;
-    font-size: 18px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 700;
+    width: 30px;
+    height: 30px;
+    margin-top: -4px;
 }
 
 
@@ -262,17 +263,46 @@
     padding-top: 10px;
 }
 
-.errors-container {
-    display: flex;
-    justify-content: center;
+.login-errors-container {
+    position: relative;
+    margin-top: -500px;
+    width: 90%;
+    margin-left: 70px;
+    height: 60px;
 }
 
-/* not working properly with background color */
-#show-errors {
+
+.signup-errors-container {
+    justify-content: center;
+    position: relative;
+    margin-top: -580px;
+    width: 90%;
+    margin-left: 70px;
+}
+
+
+.session-form-error {
+    background-color: #fcd6d3;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding: 15px 0 15px 30px;
     border-radius: 3px;
     color: #333;
-    font-size: 14px;
+    font-size: 16px;
     top: 10%;
+    line-height: 1.5em;
+    width: 98%;
+}
+
+
+
+.session-errors-x {
+    position: absolute;
+    margin-left: 1230px;
+    margin-top: -45px;
+    font-size: 36px;
+    color: #666;
+}
+
+.session-errors-x:hover {
+    cursor: pointer;
 }
