--- a/app/assets/stylesheets/searchbar.css
+++ b/app/assets/stylesheets/searchbar.css
@@ -1,11 +1,33 @@
+.searchbar-container {
+    display: flex;
+}
+
 .searchbar-component {
     width: 630px;
-    border-radius: 4px;
+    border-radius: 4px 0px 0px 4px;
     height: 40px;
-    border-color: #ebebeb;
+    border: solid 1px #ebebeb;
+    padding-left: 15px;
+    outline: none;
 }
+
 
 .searchbar-button {
     width: 55px;
     height: 30px;
+}
+
+.searchbar-icon {
+    background-color: rgb(244,13,21);
+    color: white;
+    font-size: 22px;
+    border: 1px solid rgb(244,13,21);
+    border-radius: 0px 3px 3px 0px;
+    padding: 10px 12px;
+    cursor: pointer;
+}
+
+.searchbar-icon:hover {
+    opacity: 0.85;
+    transition: all 0.4s;
 }
