--- a/app/assets/stylesheets/create_review_form.css
+++ b/app/assets/stylesheets/create_review_form.css
@@ -13,6 +13,41 @@
     letter-spacing: -0.4px;
 }
 
+input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+input[type="radio"] + .review-star-1 {
+    cursor: pointer;
+}
+
+
+.review-star-1 {
+    font-size: 18px;
+    color: white;
+    border: 1px solid rgb(192, 192, 192);
+    background-color: rgb(192, 192, 192);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+.review-star-1:focus {
+    background-color: green;
+}
+
+.review-star-1:hover {
+    background-color: gold;
+    border-color: gold;
+}
+
+input[type="radio"]:checked + .review-star-1 {
+    outline: 2px solid green;
+    background: pink;
+}
+
 
 .create-review-form-submit {
     width: 200px;
