--- a/app/assets/stylesheets/business_show_page.css
+++ b/app/assets/stylesheets/business_show_page.css
@@ -174,6 +174,11 @@
     width: 300px;
 }
 
+/* .biz-show-center-map {
+    width: 50px;
+    height: 50px;
+} */
+
 /* .biz-show-hours-item {
     display: flex;
 }
