--- a/app/assets/stylesheets/review_index_item.css
+++ b/app/assets/stylesheets/review_index_item.css
@@ -3,7 +3,7 @@
     /* border: 1px solid #666; */
     margin-left: 4%;
     margin-top: 3%;
-    height: 350px;
+    height: 250px;
     font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
@@ -56,4 +56,5 @@
     color: rgba(45,46,47,1);
     font-size: 14px;
     font-weight: 400;
+    line-height: 20px;
 }
