--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -191,6 +191,7 @@
     border: 1px solid #e6e6e6;
     margin: 15px 15px 22px 15px;
     border-radius: 4px;
+    text-decoration: none;
 }
 
 .homepage-best-business-photo {
@@ -210,13 +211,67 @@
     color: #333;
 }
 
+.smackin-oakland-container {
+    margin-top: 650px;
+    text-align: center;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.smackin-oakland-title {
+    font-weight: 700;
+    margin-bottom: 10px;
+    font-size: 21px;
+    line-height: 1.28571em;
+    color: #d32323;
+}
+
+.smackin-cities-container {
+    display: flex;
+    justify-content: center;
+    width: 750px;
+    margin-left: 300px;
+    padding-bottom: 10px;
+    border-bottom: solid 1px rgb(158, 158, 158);
+}
+
+.smackin-city {
+    padding: 0 8px;
+    color: #666;
+    font-size: 14px;
+}
+
+.homepage-hot-businesses-container {
+    text-align: center;
+    margin-top: 50px;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.homepage-hot-businesses-title {
+    color: #d32323;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.homepage-hot-businesses-links-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.homepage-hot-businesses-link {
+    border: 1px solid green;
+    width: 270px;
+    height: 295px;
+    margin: 0 15px;
+}
+
 
 .biz-homepage-footer {
     display: flex;
     justify-content: space-evenly;
     font-family: 'Poppins','Helvetica Neue',Helvetica,Arial,sans-serif;
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: #f7f7f7;
-    margin-top: 1100px;
+    margin-top: 100px;
 }
