--- a/app/assets/stylesheets/create_review_form.scss
+++ b/app/assets/stylesheets/create_review_form.scss
@@ -168,6 +168,7 @@
     border-radius: 4px;
     margin-top: 40px;
     cursor: pointer;
+    margin-bottom: 50px;
 }
 
 .create-review-form-submit:hover, .edit-review-form-submit:hover {
