--- a/app/assets/stylesheets/create_review_form.scss
+++ b/app/assets/stylesheets/create_review_form.scss
@@ -196,3 +196,14 @@
     color: rgb(51, 51, 51);
     line-height: 20px;
 }
+
+.create-review-show-errors {
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0px;
+    line-height: 20px;
+    color: rgb(224, 7, 7);
+    position: absolute;
+    padding-top: 12px;
+}
